# presenter/controller/file.go
@@ -24,14 +24,14 @@ func NewFileController(fileService usecase.FileService) *FileController {
 
 // SaveFile
 //
-// @Security		Authorization
-// @Summary		SaveFile
-// @Description	SaveFile
-// @Tags			File
-// @Accept			multipart/form-data
-// @Param			file_request	formData	file		true	"file_request"
-// @Success		200				{object}	model.File	"success"
-// @Router			/v1/api/files [POST]
+// @Security    Authorization
+// @Summary     SaveFile
+// @Description SaveFile
+// @Tags        File
+// @Accept      multipart/form-data
+// @Param       file_request formData file       true "file_request"
+// @Success     200          {object} model.File "success"
+// @Router      /v1/api/files [POST]
 func (h *FileController) SaveFile(c echo.Context) error {
 	file, err := c.FormFile("file_request")
 	if err = c.Validate(file); err != nil {
@@ -62,15 +62,15 @@ func (h *FileController) SaveFile(c echo.Context) error {
 
 // Update
 //
-//	@Security		Authorization
-//	@Summary		Update
-//	@Description	Update
-//	@Tags			File
-//	@Accept			multipart/form-data
-//	@Param			UpdateFileRequest	formData	request.UpdateFileRequest	true	"UpdateFileRequest"
-//	@Param			file_request		formData	file						false	"file_request"
-//	@Success		200					{object}	model.File					"success"
-//	@Router			/v1/api/files [PUT]
+// @Security    Authorization
+// @Summary     Update
+// @Description Update
+// @Tags        File
+// @Accept      multipart/form-data
+// @Param       UpdateFileRequest formData request.UpdateFileRequest true  "UpdateFileRequest"
+// @Param       file_request      formData file                      false "file_request"
+// @Success     200               {object} model.File                "success"
+// @Router      /v1/api/files [PUT]
 func (h *FileController) Update(c echo.Context) error {
 	var req request.UpdateFileRequest
 	if err := c.Bind(&req); err != nil {
@@ -102,14 +102,14 @@ func (h *FileController) Update(c echo.Context) error {
 
 // Delete
 //
-//	@Security		Authorization
-//	@Summary		Delete
-//	@Description	Delete
-//	@Tags			File
-//	@Accept			json
-//	@Param			id	path		string					true	"id"
-//	@Success		200	{object}	entity.SimpleResponse	"success"
-//	@Router			/v1/api/files [Delete]
+// @Security    Authorization
+// @Summary     Delete
+// @Description Delete
+// @Tags        File
+// @Accept      json
+// @Param       id  path     string                true "id"
+// @Success     200 {object} entity.SimpleResponse "success"
+// @Router      /v1/api/files [Delete]
 func (h *FileController) Delete(c echo.Context) error {
 	id := utils.ParseStringIDFromUri(c)
 
@@ -131,14 +131,14 @@ func (h *FileController) Delete(c echo.Context) error {
 
 // GetOne
 //
-//	@Security		Authorization
-//	@Summary		GetOne
-//	@Description	GetOne
-//	@Tags			File
-//	@Accept			json
-//	@Param			id	path		string		true	"id"
-//	@Success		200	{object}	model.File	"success"
-//	@Router			/v1/api/files/{id} [GET]
+// @Security    Authorization
+// @Summary     GetOne
+// @Description GetOne
+// @Tags        File
+// @Accept      json
+// @Param       id  path     string     true "id"
+// @Success     200 {object} model.File "success"
+// @Router      /v1/api/files/{id} [GET]
 func (h *FileController) GetOne(c echo.Context) error {
 	id := utils.ParseStringIDFromUri(c)
 	res, err := h.fileService.GetOne(c.Request().Context(), id)
@@ -151,14 +151,14 @@ func (h *FileController) GetOne(c echo.Context) error {
 
 // Download
 //
-//	@Security		Authorization
-//	@Summary		Download
-//	@Description	Download
-//	@Tags			File
-//	@Accept			json
-//	@Param			id	path		string					true	"id"
-//	@Success		200	{object}	entity.SimpleResponse	"success"
-//	@Router			/v1/api/files/download/{id} [GET]
+// @Security    Authorization
+// @Summary     Download
+// @Description Download
+// @Tags        File
+// @Accept      json
+// @Param       id  path     string                true "id"
+// @Success     200 {object} entity.SimpleResponse "success"
+// @Router      /v1/api/files/download/{id} [GET]
 func (h *FileController) Download(c echo.Context) error {
 	id := utils.ParseStringIDFromUri(c)
 	data, err := h.fileService.Download(c.Request().Context(), id)
