# presenter/controller/health.go
@@ -17,13 +17,13 @@ func NewHealthController() *HealthController {
 
 // Health
 //
-//	@Summary		Check health server
-//	@Description	Health
-//	@Tags			Health
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	entity.SimpleResponse	"success"
-//	@Router			/health [GET]
+// @Summary     Check health server
+// @Description Health
+// @Tags        Health
+// @Accept      json
+// @Produce     json
+// @Success     200 {object} entity.SimpleResponse "success"
+// @Router      /health [GET]
 func (h *HealthController) Health(c echo.Context) error {
 	return h.Response(c, http.StatusOK, "success", map[string]interface{}{
 		"status": "UP",
